Build using MinGW

--- a/SnakeGame/CMakeLists.txt
+++ b/SnakeGame/CMakeLists.txt
@@ -1,16 +1,17 @@
 ﻿# CMakeList.txt : CMake project for SnakeGame, include source and define
 # project specific logic here.
 #
-cmake_minimum_required (VERSION 3.8)
+cmake_minimum_required (VERSION 3.1)
 set(BOOST_ROOT "C:\\local\\boost_1_83_0")
 find_package(OpenGL REQUIRED)
 find_package(Boost REQUIRED)
-find_library(GLFW_LIBRARY glfw3 REQUIRED HINTS "${CMAKE_CURRENT_SOURCE_DIR}//external//glfw")
-find_library(GLEW_LIBRARY glew32s REQUIRED  HINTS "${CMAKE_CURRENT_SOURCE_DIR}//external//glew")
 
-message(${GLEW_LIBRARY})
+message(${OPENGL_LIBRARY})
 
 add_definitions(-DGLEW_STATIC)
+add_definitions(-DGLFW_BUILD_WIN32)
+
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/external/glfw")
 
 include_directories(
 	"${CMAKE_CURRENT_SOURCE_DIR}/external/glfw/include/"
@@ -20,23 +21,31 @@ include_directories(
 	"${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
+link_directories("${CMAKE_BINARY_DIR}/SnakeGame/external/glfw/src/")
 # Add source to this project's executable.
-add_executable (SnakeGame 
+add_executable (SnakeGame
                 "SnakeGame.cpp"
 				"engine/Renderer.cpp"
 				"engine/VertexBuffer.cpp"
 				"engine/IndexBuffer.cpp"
-				"engine/VertexArray.cpp" 
+				"engine/VertexArray.cpp"
 				"engine/Shader.cpp"
 				"engine/Layout.cpp"
 				"engine/Elements/Square.cpp"
-				"external/stb_image/stb_image.cpp" "engine/Elements/Texture.hpp" "engine/Elements/Texture.cpp" "StbTexture.cpp")
+				"external/stb_image/stb_image.cpp"
+				"engine/Elements/Texture.hpp"
+				"engine/Elements/Texture.cpp"
+				# GLEW FILES
+				"${CMAKE_CURRENT_SOURCE_DIR}/external/glew/src/glew.c"
+				# STB Texture
+				"StbTexture.cpp")
+
 
 target_link_libraries(SnakeGame
-	${OPENGL_LIBRARY}
-	${GLFW_LIBRARY}
-	${GLEW_LIBRARY}
+	"${OPENGL_LIBRARY}"
+	"glfw3"
 )
 
-
-set_target_properties(SnakeGame PROPERTIES XCODE_ATTRIBUTE_CONFIGURATION_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/tutorial01_first_window/")
+add_custom_command(TARGET SnakeGame PRE_BUILD
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory
+                       ${CMAKE_SOURCE_DIR}/SnakeGame/res/ $<TARGET_FILE_DIR:SnakeGame>/res)
