--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "SnakeGame/external/glfw"]
 	path = SnakeGame/external/glfw
 	url = https://github.com/glfw/glfw.git
+
+[submodule "SnakeGame/external/glm"]
+	path = SnakeGame/external/glm
+	url = https://github.com/g-truc/glm.git
