--- a/SnakeGame/CMakeLists.txt
+++ b/SnakeGame/CMakeLists.txt
@@ -34,11 +34,11 @@ add_executable (SnakeGame
 				"engine/Shader.cpp"
 				"engine/Layout.cpp"
 				"engine/Renderer2D.cpp"
-				"engine/Elements/Square.cpp"
+				# "engine/Elements/Square.cpp"
 				"engine/Elements/Rectangle.cpp"
-				"engine/Elements/Texture.cpp"
-				"engine/Elements/Texture3D.cpp"
-				"engine/Elements/Cube.cpp"
+				# "engine/Elements/Texture.cpp"
+				# "engine/Elements/Texture3D.cpp"
+				# "engine/Elements/Cube.cpp"
 				"engine/Cameras/OrthographicCamera.cpp"
 				"engine/Cameras/PerspectiveCamera.cpp"
 				"external/stb_image/stb_image.cpp"
